# RTSAI

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  RTSAI.spec  RTSAI_BUILD.sh  cmake_install.cmake  knowledge_graph.tsv  setup.py  test.py  tkinter_test.py
KG_Construction/: input_text.py
KG_Construction/agent_kg/: prototype.tsv
KG_Construction/kg/: named_entity.tsv
RTSAI/: UI_Art.py  UI_Editor_tabs.py  UI_Icons.py  UI_Left_Sidebar.py  UI_Left_Toggle_List.py  UI_Right_Panel.py  UI_components.py  UI_config.py  UI_funcs.py  chatbot.py  config.py  counter.py  environment.py  knowledge_graph.py  main.py  setup_funcs.py  tool_funcs.py  web_crawl.py
RTSAI.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
RTSAI/assets/: knowledge_graph_README.md
RTSAI/assets/images/: RTSAI_logo_template.pptx
RTSAI/assets/knowledge_graphs/countries/: relationship.tsv
RTSAI/assets/templates/template_knowledge_graph/: named_entity.tsv
RTSAI/data/knowledge_graphs/HKU/: named_entity.tsv  prototype.tsv  relationship.tsv
RTSAI/data/knowledge_graphs/knowledge_graph/: prototype.tsv
RTSAI/data/knowledge_graphs/universities/: relationship.tsv
RTSAI/data/knowledge_graphs/web_crawl_2/: named_entity.tsv  prototype.tsv  relationship.tsv
RTSAI/data/scrapy_spiders/HKU_spider/: scraper.py
RTSAI/data/scrapy_spiders/HKU_vision_mission_spider/: response.html  scraper.py
RTSAI/data/scrapy_spiders/web_crawl_1/: scraper.py
RTSAI/data/scrapy_spiders/web_crawl_2/: response_1.html  scraper.py
RTSAI/data/scrapy_spiders/web_crawl_3/: scraper.py
RTSAI/data/scrapy_spiders/web_crawl_4/: response_1.html  scraper.py
RTSAI/temp/kg_QALD_9/: QALD9_construct.py
RTSAI/temp/kg_QALD_9/QALD_9/: named_entity.tsv  prototype.tsv
RTSAI/temp/kg_countries/: countries.py
Scrapy/: hku.py  scrapy_notebook_1.ipynb  scrapy_notebook_2.ipynb
UI/: frame_label.py  text_wrap.py
__others/: :Users:abc:opt  :Users:abc:opt:RTSAI  CMakeLists.txt  instructions.txt  usr_local_bin
__others/__dataset/: RTSAI_data_hku_1.txt
__others/__reading/: GeeksforGeeks - Simple Ways to Read TSV Files in Python.webloc  Practical Data Analysis Cookbook.webloc
__practice/       2023.12.02  KG Construction/: context.tsv  package-lock.json  package.json  structural_analysis.py  structural_analysis_setting.py
__practice/       2023.12.02  KG Construction/__version/__version_2_noun_conjunction/: structural_analysis.py  structural_analysis_setting.py
__practice/       2023.12.02  KG Construction/__version/__version_3_noun_non_degradable/: structural_analysis.py  structural_analysis_setting.py
__practice/       2023.12.02  KG Construction/__version/__version_4_to_Stanford_tagging/: structural_analysis.py  structural_analysis_setting.py
__practice/       2023.12.18  Penn Treebank Dataset/: notebook.ipynb
__versions/_version_1_start/: CMakeLists.txt
__versions/_version_1_start/src/: RTSAI_Core.py
__versions/_version_2_start_2/: README.md
__versions/_version_2_start_2/src/: RTSAI_Core.py
__versions/_version_3_first_executable/: Makefile  RTSAI_BUILD.sh
__versions/_version_4_first_command/: Makefile  RTSAI_BUILD.sh
__versions/_version_4_first_command/src/: RTSAI_Core.py
__versions/_version_5_manual_and_env/: Makefile  RTSAI_BUILD.sh
__versions/_version_6_onedir_mode/: Makefile
package_RTSAI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/codes/: RTSAI_Create.py  RTSAI_Main.py  RTSAI_chat.py  RTSAI_env.py  RTSAI_graph.py  RTSAI_nlp.py  RTSAI_response.py  constants.py  functions.py
src/corpuses/: @corpus_00001_HKU_About.txt
src/graphs/: @graph_relationship_@.tsv  README.md  entity_@.tsv
src/manuals/: RTSAI.1  create.txt
src/manuals/chats/: default.txt  delete.txt
src/manuals/env/: activate.txt  create.txt  deactivate.txt  list.txt
src/manuals/envs/: activate.txt  deactivate.txt
src/unit_tests/: RTSAI_UT_1.sh  functions.sh
src/utests/: RTSAI_UT_2.sh
temp/kg_QALD_9/: QALD9_train.json
temp/kg_QALD_9/countries/: named_entity.tsv
temp/kg_countries/: countries.txt
(+18 files in other folders)
